[project]
name = "corridorkey"
version = "1.0.0"
description = "Neural network green screen keying for professional VFX pipelines"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "Corridor Digital" }]


dependencies = [
    # Core inference
    "torch==2.7.1",
    "torchvision==0.22.1",
    "timm==1.0.24",
    "numpy",
    "opencv-python",
    "tqdm",
    "setuptools",
    # Triton fix for Windows
    # There might still be issues though https://github.com/triton-lang/triton-windows?tab=readme-ov-file#windows-file-path-length-limit-260-causes-compilation-failure
    "triton-windows==3.3.1.post21 ; sys_platform == 'win32'",
    # GVM alpha hint generator
    "diffusers",
    "transformers",
    "accelerate",
    "peft",
    "av",
    "Pillow",
    "PIMS",
    "easydict",
    "imageio",
    "matplotlib",
    # VideoMaMa alpha hint generator
    "einops",
    # BiRefNet alpha hint generator
    "kornia",
    # CLI tools (huggingface-hub is also a transitive dep, but must be direct
    # so that uv installs the "hf" console-script entry point)
    "huggingface-hub",
    # CLI framework + terminal output
    "typer>=0.12",
    "rich>=13",
    # RunPod serverless handler + Google Drive
    "runpod",
    "google-api-python-client",
    "google-auth",
]


[project.optional-dependencies]
cuda = [
    "torch==2.7.1",
    "torchvision==0.22.1",
]
mlx = [
    "corridorkey-mlx ; python_version >= '3.11'",
]


[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "hypothesis"]
docs = ["zensical>=0.0.24"]


[project.scripts]
corridorkey = "corridorkey_cli:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["CorridorKeyModule", "gvm_core", "VideoMaMaInferenceModule"]
